--- a/index.html
+++ b/index.html
@@ -141,27 +141,26 @@
     const datos = {
       fecha: fecha,
       nombre: document.getElementById('nombre').value,
-      edad: parseFloat(document.getElementById('edad').value),
+      edad: parseInt(document.getElementById('edad').value),
       genero: document.getElementById('genero').value,
-      facilidad_uso: parseFloat(document.getElementById('facilidad_uso').value),
-      espacio_facil: parseFloat(document.getElementById('espacio_facil').value),
-      utilidad_visualizacion: parseFloat(document.getElementById('utilidad_visualizacion').value),
-      pago_facil: parseFloat(document.getElementById('pago_facil').value),
-      notificaciones_claras: parseFloat(document.getElementById('notificaciones_claras').value),
-      alertas_a_tiempo: parseFloat(document.getElementById('alertas_a_tiempo').value),
-      diseno_satisfactorio: parseFloat(document.getElementById('diseno_satisfactorio').value),
-      justicia_multas: parseFloat(document.getElementById('justicia_multas').value),
+      facilidad_uso: parseInt(document.getElementById('facilidad_uso').value),
+      espacio_facil: parseInt(document.getElementById('espacio_facil').value),
+      utilidad_visualizacion: parseInt(document.getElementById('utilidad_visualizacion').value),
+      pago_facil: parseInt(document.getElementById('pago_facil').value),
+      notificaciones_claras: parseInt(document.getElementById('notificaciones_claras').value),
+      alertas_a_tiempo: parseInt(document.getElementById('alertas_a_tiempo').value),
+      diseno_satisfactorio: parseInt(document.getElementById('diseno_satisfactorio').value),
+      justicia_multas: parseInt(document.getElementById('justicia_multas').value),
       metodo_pago: document.getElementById('metodo_pago').value,
-      problemas_tecnicos: parseFloat(document.getElementById('problemas_tecnicos').value),
-      recomendacion: parseFloat(document.getElementById('recomendacion').value)
+      problemas_tecnicos: parseInt(document.getElementById('problemas_tecnicos').value),
+      recomendacion: parseInt(document.getElementById('recomendacion').value)
     };
 
-    // Inserta aquí tu URL de API de Power BI
     const url = "https://api.powerbi.com/beta/ab7e9feb-d13b-4893-9106-4d47b99392da/datasets/161a74ab-50b5-48b2-8a93-35e08bc31ba6/rows?experience=power-bi&key=yRDZBZ%2BgD3F7cYA%2FATxmtbNkRlDO%2B8eMs3z0dHKMghjYtZpq1CsPEnBsqxmLEztNjSzQzjCIBhheD5dtx3Y2dQ%3D%3D";
 
     fetch(url, {
       method: "POST",
-      body: JSON.stringify(datos),
+      body: JSON.stringify([datos]),  // 👈 IMPORTANTE: el JSON debe ir dentro de un array []
       headers: {
         "Content-Type": "application/json"
       }
